bump to java 11 LTS
- removed old test files
- moved to List.of instead of Arrays.asList and Collections.singletonList
- rm ApiUtils#isEmpty because String#isBlank exists
- use String#lines -> Stream<String> instead of lots of wraps
- Files.writeString now present
- optimised imports