@@ -25,7 +25,6 @@ import com.git.ifly6.nsapi.NSNation;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -156,7 +155,7 @@ public class JavaTelegram {
     }
 
     public void setRecipient(String recipient) {
-        recipients = Collections.singletonList(recipient);
+        recipients = List.of(recipient);
     }
 
     /**
